Enhance SEO and add promotional sections in index.html
Added meta tags for SEO and Open Graph, and included promotional sections with links to WhatsApp.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,35 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>KARBA FINANCIAL CONSULTANT LTD</title>
+<title>KARBA Financial Consultant Ltd — Insurance & Real Estate in Nigeria</title>
+<meta name="description" content="Trusted advisory for insurance and real estate. Verified listings, direct with developers and owners. Fast WhatsApp support.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="canonical" href="https://YOUR-DOMAIN.com/">
+
+<!-- Open Graph -->
+<meta property="og:title" content="KARBA — Insurance & Real Estate">
+<meta property="og:description" content="Verified property listings and trusted insurance advisory.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://YOUR-DOMAIN.com/">
+<meta property="og:image" content="https://YOUR-DOMAIN.com/assets/karba-logo-gold.png">
+
+<!-- Social profiles for search -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "KARBA Financial Consultant Ltd",
+  "url": "https://karbafinancialconsultant.com/",
+  "logo": "https://karbafinancialconsultant.com/assets/karba-logo-gold.png",
+  "sameAs": [
+    "https://facebook.com/profile.php?id=61579013108278/",
+    "https://www.instagram.com/karba_f.c?igsh=cGxxaWhnMGJvZ3p1/",
+    "https://youtube.com/@KarbaFinancialConsultant",
+    "https://www.tiktok.com/@YOURHANDLE",
+    "https://www.linkedin.com/in/babatunde-bamigbetan-14a4b6142/"
+  ]
+}
+</script>
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 <style>
   :root{
@@ -59,11 +87,12 @@
 <header class="header">
   <div class="container row">
     <div class="brand">
-      <div class="logo" style="background: none; border: none; box-shadow: none; padding: 0; margin: 0; display: inline-flex; align-items: center;">
-  <img src="assets/karba-logo-gold.png" alt="Karba Logo" style="height: 40px; width: auto; vertical-align: middle; display: inline-block;">
-</div>
-<div style="font-weight: 600; display: inline-block; margin-left: 10px;">
-  KARBA Financial Consultant Ltd
+  <a href="#landing" style="text-decoration:none; display:flex; align-items:center; gap:8px;">
+    <img src="assets/karba-logo-gold.png" alt="KARBA logo" style="height:42px; width:auto; vertical-align:middle;">
+    <span style="font-weight:600; color:white;">
+      <span style="color:#f0c040;">KARBA</span> Financial Consultant Ltd
+    </span>
+  </a>
 </div>
     </div>
 
@@ -179,6 +208,81 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
     </div>
   </section>
 
+<!-- ===== PROMOS & SPECIAL ANNOUNCEMENTS ===== -->
+<section class="section" id="promos">
+  <div class="container">
+    <hr style="border: 0; border-top: 1px solid #345; margin: 40px 0 25px 0;">
+    <h2>Promos & Special Announcements</h2>
+
+    <style>
+      .promo-box {
+        border: 1px solid #345;
+        padding: 16px;
+        margin: 12px 0;
+        border-left: 4px solid #f0c040;
+        background: rgba(255,255,255,0.03);
+      }
+      .promo-box h3 {
+        margin: 0 0 8px 0;
+        color: #f0c040;
+      }
+      .promo-box p {
+        margin: 0 0 10px 0;
+        opacity: .9;
+      }
+      .promo-links a {
+        display: inline-block;
+        background: #f0c040;
+        color: #000;
+        font-weight: 500;
+        text-decoration: none;
+        padding: 5px 12px;
+        border-radius: 4px;
+        transition: 0.3s;
+      }
+      .promo-links a:hover {
+        background: #d9aa2b;
+      }
+    </style>
+
+    <!-- ===== PROMO 1 ===== -->
+    <div class="promo-box">
+      <h3>🎉 Limited Offer: 5% Discount on Lekki Lands</h3>
+      <p>
+        Secure your Lekki property this week and enjoy up to <strong>₦2.5m savings</strong>.
+      </p>
+      <div class="promo-links">
+        <a href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'm%20interested%20in%20the%205%%20discount%20Lekki%20Land%20offer.%20Please%20share%20details."
+           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
+      </div>
+    </div>
+
+    <!-- ===== PROMO 2 ===== -->
+    <div class="promo-box">
+      <h3>🏠 New Listing Alert: 4-Bed Duplex in Ajah</h3>
+      <p>
+        Fresh 4-Bed Duplex now available for inspection in Ajah. Book a visit today — limited slots available!
+      </p>
+      <div class="promo-links">
+        <a href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'm%20interested%20in%20the%204-Bed%20Duplex%20in%20Ajah.%20Kindly%20share%20details."
+           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
+      </div>
+    </div>
+
+    <!-- ===== PROMO 3 (example template) ===== -->
+    <!--
+    <div class="promo-box">
+      <h3>🔥 Holiday Promo</h3>
+      <p>Enjoy discounted service fees on all insurance advisory sessions booked before December 31st.</p>
+      <div class="promo-links">
+        <a href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'd%20like%20to%20know%20more%20about%20the%20Holiday%20Promo."
+           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
+      </div>
+    </div>
+    -->
+  </div>
+</section>
+  
 <!-- Put this near the very top of <body> so Back to Top works -->
 <a id="top"></a>
 
