Update canonical links and social media handles

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <title>KARBA Financial Consultant Ltd — Insurance & Real Estate in Nigeria</title>
 <meta name="description" content="Trusted advisory for insurance and real estate. Verified listings, direct with developers and owners. Fast WhatsApp support.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://YOUR-DOMAIN.com/">
+<link rel="canonical" href="https://karbafinancialconsultant.com/">
 
 <!-- Open Graph -->
 <meta property="og:title" content="KARBA — Insurance & Real Estate">
 <meta property="og:description" content="Verified property listings and trusted insurance advisory.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://YOUR-DOMAIN.com/">
-<meta property="og:image" content="https://YOUR-DOMAIN.com/assets/karba-logo-gold.png">
+<meta property="og:url" content="https://karbafinancialconsultant.com/">
+<meta property="og:image" content="https://karbafinancialconsultant.com/assets/karba-logo-gold.png">
 
 <!-- Social profiles for search -->
 <script type="application/ld+json">
@@ -27,7 +27,7 @@
     "https://facebook.com/profile.php?id=61579013108278/",
     "https://www.instagram.com/karba_f.c?igsh=cGxxaWhnMGJvZ3p1/",
     "https://youtube.com/@KarbaFinancialConsultant",
-    "https://www.tiktok.com/@YOURHANDLE",
+    "https://www.tiktok.com/@karba_fc",
     "https://www.linkedin.com/in/babatunde-bamigbetan-14a4b6142/"
   ]
 }
@@ -85,23 +85,20 @@
 </head>
 <body>
 <header class="header">
-  <div class="container row">
-    <div class="brand">
-  <a href="#landing" style="text-decoration:none; display:flex; align-items:center; gap:8px;">
-    <img src="assets/karba-logo-gold.png" alt="KARBA logo" style="height:42px; width:auto; vertical-align:middle;">
-    <span style="font-weight:600; color:white;">
-      <span style="color:#f0c040;">KARBA</span> Financial Consultant Ltd
-    </span>
-  </a>
-</div>
+  <div class="container row" style="display:flex;justify-content:space-between;align-items:center;gap:16px;flex-wrap:nowrap;">
+    <div class="brand" style="display:flex;align-items:center;gap:8px;white-space:nowrap;flex-shrink:0;">
+      <a href="#landing" style="display:flex;align-items:center;gap:8px;text-decoration:none;">
+        <img src="assets/karba-logo-gold.png" alt="KARBA logo" style="height:42px;width:auto;vertical-align:middle;">
+        <span style="font-weight:600;color:#fff;"><span style="color:#f0c040;">KARBA</span> Financial Consultant Ltd</span>
+      </a>
     </div>
 
-    <nav>
-      <a href="#" onclick="show('landing')">Home</a>
-      <a href="#plans" onclick="show('landing')">Insurance Plans</a>
-      <a href="#realestate" onclick="show('landing')">Real Estate</a>
-      <a href="#about" onclick="show('landing')">About</a>
-      <button class="primary" onclick="show('dashboard')">Portal Login</button>
+    <nav style="display:flex;align-items:center;gap:20px;white-space:nowrap;">
+      <a href="#landing" onclick="show('landing')" style="color:#fff;text-decoration:none;">Home</a>
+      <a href="#plans" onclick="show('plans')" style="color:#fff;text-decoration:none;">Insurance Plans</a>
+      <a href="#realestate" onclick="show('realestate')" style="color:#fff;text-decoration:none;">Real Estate</a>
+      <a href="#about" onclick="show('about')" style="color:#fff;text-decoration:none;">About</a>
+      <button class="primary" style="background:#f0c040;border:none;padding:6px 12px;border-radius:4px;">Portal Login</button>
     </nav>
   </div>
 </header>
