--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
       </a>
     </div>
 
-    <nav style="display:flex;align-items:center;gap:20px;white-space:nowrap;">
-      <a href="#landing" onclick="show('landing')" style="color:#fff;text-decoration:none;">Home</a>
-      <a href="#plans" onclick="show('plans')" style="color:#fff;text-decoration:none;">Insurance Plans</a>
-      <a href="#realestate" onclick="show('realestate')" style="color:#fff;text-decoration:none;">Real Estate</a>
-      <a href="#about" onclick="show('about')" style="color:#fff;text-decoration:none;">About</a>
-      <button class="primary" style="background:#f0c040;border:none;padding:6px 12px;border-radius:4px;">Portal Login</button>
+    <nav>
+      <a href="#" onclick="show('landing')">Home</a>
+      <a href="#plans" onclick="show('landing')">Insurance Plans</a>
+      <a href="#realestate" onclick="show('landing')">Real Estate</a>
+      <a href="#about" onclick="show('landing')">About</a>
+      <button class="primary" onclick="show('dashboard')">Portal Login</button>
     </nav>
   </div>
 </header>
