--- a/index.html
+++ b/index.html
@@ -93,13 +93,29 @@
       </a>
     </div>
 
-    <nav>
-      <a href="#" onclick="show('landing')">Home</a>
-      <a href="#plans" onclick="show('landing')">Insurance Plans</a>
-      <a href="#realestate" onclick="show('landing')">Real Estate</a>
-      <a href="#about" onclick="show('landing')">About</a>
-      <button class="primary" onclick="show('dashboard')">Portal Login</button>
-    </nav>
+    <main>
+  <section id="landing" class="view">
+    <!-- landing content -->
+  </section>
+
+  <section id="plans" class="view">
+    <!-- plans content -->
+  </section>
+
+  <section id="realestate" class="view">
+    <!-- real estate content -->
+  </section>
+
+  <section id="about" class="view">
+    <!-- about content -->
+  </section>
+
+  <section id="dashboard" class="view">
+    <h2>Client Portal</h2>
+    <p>Welcome to the dashboard.</p>
+    <!-- your portal/dashboard content -->
+  </section>
+</main>
   </div>
 </header>
 
