--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <header class="header">
   <div class="container row">
     <div class="brand">
-      <div class="logo">K</div>
+       <img src="assets/karba-logo-gold.png" alt="KARBA logo" style="height:42px;width:auto;vertical-align:middle;">
       <div style="font-weight:600">KARBA Financial Consultant Ltd</div>
     </div>
     <nav>
@@ -394,8 +394,7 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
   <section class="section" style="border-top:none">
     <div class="container">
       <div class="row">
-        <h2 class="title" style="margin:0">“KARBA Client & Agent Portal – Under Development”
-Our digital platform is currently being enhanced to serve you better. Please check back soon.</h2>
+        <h2 class="title" style="margin:0">Client Dashboard</h2>
         <div class="ribbon">Free consultation — limited time</div>
       </div>
 
@@ -503,7 +502,7 @@ Our digital platform is currently being enhanced to serve you better. Please che
     </div>
   </section>
 </main>
-
+  
 <footer class="footer">
   <div class="container row">
     <div>© <span id="y"></span> KARBA Financial Consultant Ltd. All rights reserved.</div>
