--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <li>Motor & General (via partner insurers)</li>
           </ul>
           <div class="cta">
-            <button class="btn primary">Request Official Quote</button>
+            <a class="btn" href="#contact">Request Official Quote</a>
             <button class="btn">See Plan Types</button>
           </div>
           <p style="font-size:12px;color:var(--muted);margin-top:8px">*Calculators differ by company. KARBA fetches accurate quotes directly from your chosen insurer.</p>
