--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>KARBA Financial Consultant Ltd — Insurance & Real Estate in Nigeria</title>
 <meta name="description" content="Trusted advisory for insurance and real estate. Verified listings, direct with developers and owners. Fast WhatsApp support.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,6 +31,9 @@
   ]
 }
 </script>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>KARBA Mockups v1 – Landing & Client Dashboard</title>
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 <style>
   :root{
@@ -282,7 +284,7 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
 
 <section class="section" id="listings">
   <div class="container">
-    <h2>Featured Real Estate</h2>
+    <h2>Available Properties</h2>
     <p>Live availability with external media links.</p>
     <p style="opacity:.7; margin-top:-6px;">Last updated: 2025-10-25</p>
 
