--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>KARBA Mockups v1 – Landing & Client Dashboard</title>
-  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 <style>
   :root{
     --navy:#001F3F;
@@ -59,7 +58,7 @@
 <header class="header">
   <div class="container row">
     <div class="brand">
-       <img src="assets/karba-logo-gold.png" alt="KARBA logo" style="height:42px;width:auto;vertical-align:middle;">
+      <div class="logo">K</div>
       <div style="font-weight:600">KARBA Financial Consultant Ltd</div>
     </div>
     <nav>
@@ -83,30 +82,18 @@
           <a href="#realestate" class="btn">View Real Estate Offers</a>
         </div>
         <div style="margin-top:10px">
-          <span class="pill">CAC</span>
-          <span class="pill">SCUML</span>
           <span class="pill">NAICOM</span>
-          <span class="pill">LASRERA</span>
           <span class="pill">CIIN</span>
+          <span class="pill">SCUML</span>
+          <span class="pill">LASRERA</span>
         </div>
       </div>
       <div class="card">
         <div class="grid grid-2">
-          <div class="card stat"><div class="lbl">Clients</div><div class="val">200+</div></div>
-          <div class="card stat"><div class="lbl">Partners</div><div class="val">10+</div></div>
-          <div class="card stat"><div class="lbl">Plans</div><div class="val">Life-Insurance & Real Estate</div></div>
-          <div class="card stat">
-  <div class="lbl">Support</div>
-  <div class="val" style="display: flex; gap: 10px; justify-content: center; align-items: center;">
-  <a href="https://wa.me/2349162631205" target="_blank" 
-     style="padding: 8px 14px; border: 1px solid #f0c040; border-radius: 6px; color: #f0c040; text-decoration: none; font-weight: 500;">
-    WhatsApp
-  </a>
-  <a href="mailto:info@karbafinancialconsultant.com"
-     style="padding: 8px 14px; border: 1px solid #f0c040; border-radius: 6px; color: #f0c040; text-decoration: none; font-weight: 500;">
-    Email
-  </a>
-</div>
+          <div class="card stat"><div class="lbl">Clients</div><div class="val">2,140+</div></div>
+          <div class="card stat"><div class="lbl">Partners</div><div class="val">20+</div></div>
+          <div class="card stat"><div class="lbl">Plans</div><div class="val">Insurance & Real Estate</div></div>
+          <div class="card stat"><div class="lbl">Support</div><div class="val">WhatsApp • Email</div></div>
         </div>
       </div>
     </div>
@@ -121,12 +108,12 @@
           <h3 style="margin:0 0 8px 0">Insurance Advisory</h3>
           <ul class="list">
             <li>Education Plans (with partial withdrawal schedules)</li>
-            <li>Family Protection & Life Assurance (Whole-life & Term)</li>
+            <li>Family Protection & Life Assurance</li>
             <li><b>Annuity Plans</b> & Retirement</li>
             <li>Motor & General (via partner insurers)</li>
           </ul>
           <div class="cta">
-            <a class="btn" href="#contact">Request Official Quote</a>
+            <button class="btn primary">Request Official Quote</button>
             <button class="btn">See Plan Types</button>
           </div>
           <p style="font-size:12px;color:var(--muted);margin-top:8px">*Calculators differ by company. KARBA fetches accurate quotes directly from your chosen insurer.</p>
@@ -148,193 +135,63 @@
     </div>
   </section>
 
-    <section class="section" id="about">
+  <section class="section" id="listings">
+    <div class="container">
+      <h2 class="title">Featured Real Estate</h2>
+      <p class="subtitle">Live availability with external media links.</p>
+      <div class="grid grid-3">
+        <div class="card">
+          <div class="card" style="height:110px;display:grid;place-items:center;color:var(--muted)">Media: YouTube / Instagram</div>
+          <div style="margin-top:10px;font-weight:600">3-Bedroom Duplex, Lekki Phase 1</div>
+          <div class="subtitle" style="margin:2px 0">₦180m</div>
+          <span class="badge ok">Available</span>
+          <div class="cta" style="margin-top:12px">
+            <a class="btn primary">View Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card" style="height:110px;display:grid;place-items:center;color:var(--muted)">Media: YouTube / Instagram</div>
+          <div style="margin-top:10px;font-weight:600">600sqm Land, Ibeju-Lekki</div>
+          <div class="subtitle" style="margin:2px 0">₦25m</div>
+          <span class="badge ok">Available</span>
+          <div class="cta" style="margin-top:12px">
+            <a class="btn primary">View Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card" style="height:110px;display:grid;place-items:center;color:var(--muted)">Media: YouTube / Instagram</div>
+          <div style="margin-top:10px;font-weight:600">2-Bed Apartment, Yaba</div>
+          <div class="subtitle" style="margin:2px 0">₦110m</div>
+          <span class="badge">Rented</span>
+          <div class="cta" style="margin-top:12px">
+            <a class="btn primary">View Details</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section" id="about">
     <div class="container grid grid-2">
       <div>
         <h2 class="title">About KARBA</h2>
         <p class="subtitle" style="line-height:1.6">
-          KARBA Financial Consultant Ltd is a legally registered Nigerian firm (RC: 8818675) offering Insurance, Financial, and Real Estate Consultancy services.
-Our goal is to bridge the gap between clients and trusted providers; ensuring that insurance and real estate advisory services are accessible, affordable, and dependable.
-          Our operations are guided by three core values: Transparency, Professionalism, and Innovation; which define how we serve our clients and partners.
-          Our mission is to become Africa’s leading Insurance and Real Estate Consultancy brand, recognized for excellence, trust, and service to humanity.
+          KARBA Financial Consultant Ltd is your trusted intermediary for Insurance and Real Estate. We help clients access
+          verified opportunities with clarity and confidence — from Education and Family Protection to Annuity Plans and high-
+          potential property deals. Regulated: NAICOM • CIIN • SCUML • LASRERA.
         </p>
       </div>
       <div class="card">
         <h3 style="margin:0">Why Clients Choose KARBA</h3>
         <ul class="list">
-          <li>Certified & trusted advisors (CIIN/NAICOM/LASRERA)</li>
-          <li>Dual advantage (Insurance & Real Estate in one brand)</li>
           <li>Transparent, company-verified quotes (no generic calculators)</li>
           <li>Direct payments to your chosen insurer or developer</li>
           <li>Receipt upload & admin verification for peace of mind</li>
-          <li>Fast WhatsApp support and clear documentation (Tech-driven)</li>
-          <li>Tailored solutions for individuals,families,investors,& businesses.</li>
+          <li>Fast WhatsApp support and clear documentation</li>
         </ul>
       </div>
     </div>
   </section>
-
-<!-- ===== PROMOS & SPECIAL ANNOUNCEMENTS ===== -->
-<section class="section" id="promos">
-  <div class="container">
-    <hr style="border: 0; border-top: 1px solid #345; margin: 40px 0 25px 0;">
-    <h2>Promos & Special Announcements</h2>
-
-    <style>
-      .promo-box {
-        border: 1px solid #345;
-        padding: 16px;
-        margin: 12px 0;
-        border-left: 4px solid #f0c040;
-        background: rgba(255,255,255,0.03);
-      }
-      .promo-box h3 {
-        margin: 0 0 8px 0;
-        color: #f0c040;
-      }
-      .promo-box p {
-        margin: 0 0 10px 0;
-        opacity: .9;
-      }
-      .promo-links a {
-        display: inline-block;
-        background: #f0c040;
-        color: #000;
-        font-weight: 500;
-        text-decoration: none;
-        padding: 5px 12px;
-        border-radius: 4px;
-        transition: 0.3s;
-      }
-      .promo-links a:hover {
-        background: #d9aa2b;
-      }
-    </style>
-
-    <!-- ===== PROMO 1 ===== -->
-    <div class="promo-box">
-      <h3>🎉 Limited Offer: 5% Discount on Lekki Lands</h3>
-      <p>
-        Secure your Lekki property this week and enjoy up to <strong>₦2.5m savings</strong>.
-      </p>
-      <div class="promo-links">
-        <a href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'm%20interested%20in%20the%205%%20discount%20Lekki%20Land%20offer.%20Please%20share%20details."
-           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
-      </div>
-    </div>
-
-    <!-- ===== PROMO 2 ===== -->
-    <div class="promo-box">
-      <h3>🏠 New Listing Alert: 4-Bed Duplex in Ajah</h3>
-      <p>
-        Fresh 4-Bed Duplex now available for inspection in Ajah. Book a visit today — limited slots available!
-      </p>
-      <div class="promo-links">
-        <a href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'm%20interested%20in%20the%204-Bed%20Duplex%20in%20Ajah.%20Kindly%20share%20details."
-           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
-      </div>
-    </div>
-
-    <!-- ===== PROMO 3 (example template) ===== -->
-    <!--
-    <div class="promo-box">
-      <h3>🔥 Holiday Promo</h3>
-      <p>Enjoy discounted service fees on all insurance advisory sessions booked before December 31st.</p>
-      <div class="promo-links">
-        <a href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'd%20like%20to%20know%20more%20about%20the%20Holiday%20Promo."
-           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
-      </div>
-    </div>
-    -->
-  </div>
-</section>
-  
-<!-- Put this near the very top of <body> so Back to Top works -->
-<a id="top"></a>
-
-<section class="section" id="listings">
-  <div class="container">
-    <h2>Available Properties</h2>
-    <p>Live availability with external media links.</p>
-    <p style="opacity:.7; margin-top:-6px;">Last updated: 2025-10-25</p>
-
-    <style>
-      .cols { display:grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap:20px; }
-      .col-box { border:1px solid #345; padding:14px; }
-      .col-title { font-weight:700; margin:0 0 8px 0; }
-      .prop-list { list-style:none; margin:0; padding:0; border-top:1px solid #345; }
-      .prop-list li { border-top:1px solid #345; padding:10px 0; display:flex; justify-content:space-between; gap:10px; }
-      .muted { opacity:.9; }
-      .cta-link { padding:6px 10px; border:1px solid #f0c040; text-decoration:none; color:#f0c040; white-space:nowrap; }
-      @media (max-width:600px){ .prop-list li{ flex-direction:column; align-items:flex-start; } }
-    </style>
-
-    <div class="cols">
-      <!-- LAND -->
-      <div class="col-box">
-        <h3 class="col-title">Land</h3>
-        <ol class="prop-list">
-          <li>
-            <div><strong>1. 600sqm Land, Ibeju-Lekki</strong> — <span class="muted">₦25m • Available</span></div>
-            <a class="cta-link" href="https://your-media-link-here" target="_blank" rel="noopener">See Photos</a>
-          </li>
-          <li>
-            <div><strong>2. 300sqm Plot, Epe</strong> — <span class="muted">₦12m • Available</span></div>
-            <a class="cta-link" href="https://your-media-link-here" target="_blank" rel="noopener">See Photos</a>
-          </li>
-          <li>
-            <div><strong>1. 600sqm Land, Ibeju-Lekki</strong> — <span class="muted">₦25m • Available</span></div>
-            <a class="cta-link" href="https://your-media-link-here" target="_blank" rel="noopener">See Photos</a>
-          </li>
-          <!-- copy li blocks, update number/title/price/link -->
-        </ol>
-      </div>
-
-      <!-- HOUSES FOR SALE -->
-      <div class="col-box">
-        <h3 class="col-title">Houses for Sale</h3>
-        <ol class="prop-list">
-          <li>
-            <div><strong>1. 3-Bed Duplex, Lekki Phase 1</strong> — <span class="muted">₦180m • Available</span></div>
-            <a class="cta-link" href="https://your-media-link-here" target="_blank" rel="noopener">See Photos</a>
-          </li>
-          <li>
-            <div><strong>2. 4-Bed Terrace, Ajah</strong> — <span class="muted">₦95m • Available</span></div>
-            <a class="cta-link" href="https://your-media-link-here" target="_blank" rel="noopener">See Photos</a>
-          </li>
-           <li>
-            <div><strong>1. 3-Bed Duplex, Lekki Phase 1</strong> — <span class="muted">₦180m • Available</span></div>
-            <a class="cta-link" href="https://your-media-link-here" target="_blank" rel="noopener">See Photos</a>
-          </li>
-        </ol>
-      </div>
-
-      <!-- RENTALS -->
-      <div class="col-box">
-        <h3 class="col-title">Rentals</h3>
-        <ol class="prop-list">
-          <li>
-            <div><strong>1. 2-Bed Apartment, Yaba</strong> — <span class="muted">₦1.1m/yr • Available</span></div>
-            <a class="cta-link" href="https://your-media-link-here" target="_blank" rel="noopener">See Photos</a>
-          </li>
-          <li>
-            <div><strong>2. Studio, Surulere</strong> — <span class="muted">₦650k/yr • Available</span></div>
-            <a class="cta-link" href="https://your-media-link-here" target="_blank" rel="noopener">See Photos</a>
-          </li>
-          <li>
-            <div><strong>1. 2-Bed Apartment, Yaba</strong> — <span class="muted">₦1.1m/yr • Available</span></div>
-            <a class="cta-link" href="https://your-media-link-here" target="_blank" rel="noopener">See Photos</a>
-          </li>
-        </ol>
-      </div>
-    </div>
-
-    <!-- Back to Top -->
-    <div style="margin-top:18px;">
-      <a href="#top" style="text-decoration:none; color:#5eb3ff;">↑ Back to Top</a>
-    </div>
-  </div>
-</section>
 
   <section class="section" id="contact">
     <div class="container row">
@@ -343,20 +200,8 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
         <h3 style="margin:8px 0 0 0">Start with a quick chat. Get verified options within 24–48h.</h3>
       </div>
       <div class="cta">
-        <!-- WhatsApp button -->
-<a class="btn primary" 
-   href="https://wa.me/2349162631205" 
-   target="_blank"
-   style="text-decoration: none;">
-   WhatsApp Us
-</a>
-
-<!-- Email button -->
-<a class="btn" 
-   href="mailto:info@karbafinancialconsultant.com"
-   style="text-decoration: none;">
-   Email Us
-</a>
+        <a class="btn primary" href="#">WhatsApp Us</a>
+        <a class="btn" href="#" onclick="show('dashboard')">Register</a>
       </div>
     </div>
   </section>
@@ -474,16 +319,11 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
     </div>
   </section>
 </main>
-  
+
 <footer class="footer">
   <div class="container row">
     <div>© <span id="y"></span> KARBA Financial Consultant Ltd. All rights reserved.</div>
-    <div class="footer-links" style="display: flex; gap: 15px; justify-content: center;">
-  <a href="https://facebook.com/profile.php?id=61579013108278/" target="_blank" style="color: inherit; text-decoration: none;">Facebook</a>
-  <a href="https://www.instagram.com/karba_f.c?igsh=cGxxaWhnMGJvZ3p1/" target="_blank" style="color: inherit; text-decoration: none;">Instagram</a>
-  <a href="https://www.linkedin.com/in/babatunde-bamigbetan-14a4b6142/" target="_blank" style="color: inherit; text-decoration: none;">LinkedIn</a>
-  <a href="https://youtube.com/@KarbaFinancialConsultant" target="_blank" style="color: inherit; text-decoration: none;">YouTube</a>
-</div>
+    <div><a href="#" style="color:inherit;text-decoration:none">Privacy</a> • <a style="color:inherit;text-decoration:none" href="#">Terms</a> • <a style="color:inherit;text-decoration:none" href="#">Contact</a></div>
   </div>
 </footer>
 
@@ -500,36 +340,6 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
     if(which==='ins'){ insBtn.classList.add('active'); reBtn.classList.remove('active'); ins.style.display='block'; re.style.display='none'; }
     else { reBtn.classList.add('active'); insBtn.classList.remove('active'); re.style.display='block'; ins.style.display='none'; }
   }
-</script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>KARBA Financial Consultant Ltd — Insurance & Real Estate in Nigeria</title>
-<meta name="description" content="Trusted advisory for insurance and real estate. Verified listings, direct with developers and owners. Fast WhatsApp support.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://karbafinancialconsultant.com/">
-
-<!-- Open Graph -->
-<meta property="og:title" content="KARBA — Insurance & Real Estate">
-<meta property="og:description" content="Verified property listings and trusted insurance advisory.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://karbafinancialconsultant.com/">
-<meta property="og:image" content="https://karbafinancialconsultant.com/assets/karba-logo-gold.png">
-
-<!-- Social profiles for search -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "KARBA Financial Consultant Ltd",
-  "url": "https://karbafinancialconsultant.com/",
-  "logo": "https://karbafinancialconsultant.com/assets/karba-logo-gold.png",
-  "sameAs": [
-    "https://facebook.com/profile.php?id=61579013108278/",
-    "https://www.instagram.com/karba_f.c?igsh=cGxxaWhnMGJvZ3p1/",
-    "https://youtube.com/@KarbaFinancialConsultant",
-    "https://www.tiktok.com/@karba_fc",
-    "https://www.linkedin.com/in/babatunde-bamigbetan-14a4b6142/"
-  ]
-}
 </script>
 </body>
 </html>
