--- a/index.html
+++ b/index.html
@@ -87,22 +87,35 @@
 </head>      
 <body>
 <header class="header">
-    <div class="container">
-      <div class="brand">
-        <a href="#landing" style="display:flex;align-items:center;gap:8px;text-decoration:none;">
-          <img src="assets/karba-logo-gold.png" alt="KARBA logo">
-          <span class="name"><span class="karba">KARBA</span> Financial Consultant Ltd</span>
-        </a>
-      </div>
-      <nav>
-        <a href="#landing">Home</a>
-        <a href="#plans">Insurance Plans</a>
-        <a href="#realestate">Real Estate</a>
-        <a href="#about">About</a>
-        <a class="btn" href="#dashboard">Portal Login</a>
-      </nav>
+  <div class="container row">
+    <div class="brand">
+       <img src="assets/karba-logo-gold.png" alt="KARBA logo" style="height:42px;width:auto;vertical-align:middle;">
+      <div style="font-weight:600">KARBA Financial Consultant Ltd</div>
     </div>
-  </header>
+    <nav>
+     <section id="landing" class="view">
+  <!-- Home content -->
+</section>
+
+<section id="plans" class="view">
+  <!-- Insurance Plans -->
+</section>
+
+<section id="realestate" class="view">
+  <!-- Real Estate -->
+</section>
+
+<section id="about" class="view">
+  <!-- About -->
+</section>
+
+<section id="dashboard" class="view">
+  <h2>Client & Agent Portal</h2>
+  <p>Our digital platform is under development. Please check back soon.</p>
+</section>
+    </nav>
+  </div>
+</header>
 
 <main id="landing" class="view">
   <section class="section hero" style="border-top:none">
