--- a/index.html
+++ b/index.html
@@ -93,26 +93,11 @@
       <div style="font-weight:600">KARBA Financial Consultant Ltd</div>
     </div>
     <nav>
-     <section id="landing" class="view">
-  <!-- Home content -->
-</section>
-
-<section id="plans" class="view">
-  <!-- Insurance Plans -->
-</section>
-
-<section id="realestate" class="view">
-  <!-- Real Estate -->
-</section>
-
-<section id="about" class="view">
-  <!-- About -->
-</section>
-
-<section id="dashboard" class="view">
-  <h2>Client & Agent Portal</h2>
-  <p>Our digital platform is under development. Please check back soon.</p>
-</section>
+      <a href="#" onclick="show('landing')">Home</a>
+      <a href="#plans" onclick="show('landing')">Plans</a>
+      <a href="#realestate" onclick="show('landing')">Real Estate</a>
+      <a href="#about" onclick="show('landing')">About</a>
+      <button class="primary" onclick="show('dashboard')">Portal Login</button>
     </nav>
   </div>
 </header>
