--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
     <nav>
       <a href="#" onclick="show('landing')">Home</a>
-      <a href="#plans" onclick="show('landing')">Plans</a>
+      <a href="#plans" onclick="show('landing')">Insurance Plans</a>
       <a href="#realestate" onclick="show('landing')">Real Estate</a>
       <a href="#about" onclick="show('landing')">About</a>
       <button class="primary" onclick="show('dashboard')">Portal Login</button>
@@ -390,7 +390,6 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
       </div>
     </div>
   </section>
-</main>
 
 <main id="dashboard" class="view" style="display:none">
   <section class="section" style="border-top:none">
